<resources>
    <string name="app_name">MeineNachrichten</string>
    <string name="hint_filter">Filter</string>
    <string name="text_search">Suchen</string>
    <string name="filter_language">Sprache filtern</string>
    <string name="filter_country">Land filtern</string>
    <string name="open_help">Hilfe</string>
    <string name="more_filters">Mehr Filter</string>
    <string name="select_country">Länder wählen</string>
    <string name="select_language">Sprachen auswählen</string>
    <string name="select_categories">Kategorien auswählen</string>
    <string name="save_filters">Filter speichern</string>
    <string name="select_to_date">Datum bis</string>
    <string name="select_from_date">Datum von</string>
    <string name="delete_filters">Alle Filter löschen</string>

    <!-- Countries -->
    <string name="argentina">Argentinien</string>
    <string name="australia">Australien</string>
    <string name="austria">Österreich</string>
    <string name="belgium">Belgien</string>
    <string name="brazil">Brasilien</string>
    <string name="bulgaria">Bulgarien</string>
    <string name="canada">Kanada</string>
    <string name="china">China</string>
    <string name="colombia">Kolumbien</string>
    <string name="cuba">Kuba</string>
    <string name="czech_republik">Tschechien</string>
    <string name="egypt">Ägypten</string>
    <string name="france">Frankreich</string>
    <string name="germany">Deutschland</string>
    <string name="greece">Griechenland</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="hungary">Ungarn</string>
    <string name="india">Indien</string>
    <string name="indonesia">Indonesien</string>
    <string name="ireland">Irland</string>
    <string name="israel">Israel</string>
    <string name="italy">Italien</string>
    <string name="japan">Japan</string>
    <string name="latvia">Lettland</string>
    <string name="lebanon">Libanon</string>
    <string name="lithuania">Litauen</string>
    <string name="malaysia">Malaysia</string>
    <string name="mexico">Mexiko</string>
    <string name="morocco">Marokko</string>
    <string name="netherlands">Niederlande</string>
    <string name="new_zealand">Neuseeland</string>
    <string name="nigeria">Nigerien</string>
    <string name="north_korea">Nord Korea</string>
    <string name="norway">Norwegen</string>
    <string name="pakistan">Pakistan</string>
    <string name="phillipines">Phillipinen</string>
    <string name="poland">Polen</string>
    <string name="portugal">Portugal</string>
    <string name="romania">Rumänien</string>
    <string name="russia">Russland</string>
    <string name="saudi_arabia">Saudi Arabien</string>
    <string name="serbia">Serbien</string>
    <string name="singapore">Singapur</string>
    <string name="slovakia">Slowakei</string>
    <string name="slovenia">Slovenien</string>
    <string name="south_africa">Südafrika</string>
    <string name="south_korea">Süd Korea</string>
    <string name="spain">Spanien</string>
    <string name="sweden">Schweden</string>
    <string name="switzerland">Schweiz</string>
    <string name="taiwan">Taiwan</string>
    <string name="thailand">Thailand</string>
    <string name="turkey">Türkei</string>
    <string name="ukraine">Ukraine</string>
    <string name="united_arab_emirates">Vereinigte Arabische Emirate</string>
    <string name="united_kingdom">Vereinigtes Königreich</string>
    <string name="united_states_of_america">Vereinigte Staaten</string>
    <string name="venezuela">Venezuela</string>

    <!-- Languages -->
    <string name="arabic">Arabisch</string>
    <string name="bosnian">Bosnisch</string>
    <string name="bulgarian">Bulgarisch</string>
    <string name="chinese">Chinesisch</string>
    <string name="croatian">Kroatisch</string>
    <string name="czech">Tschechisch</string>
    <string name="dutch">Holländisch</string>
    <string name="english">Englisch</string>
    <string name="french">Französisch</string>
    <string name="german">Deutsch</string>
    <string name="greek">Griechisch</string>
    <string name="hebrew">Hebräisch</string>
    <string name="hindi">Hindi</string>
    <string name="hungarian">Ungarisch</string>
    <string name="indonesian">Indonesisch</string>
    <string name="italian">Italienisch</string>
    <string name="japanese">Japanisch</string>
    <string name="korean">Koreanisch</string>
    <string name="latvian">Lettisch</string>
    <string name="lithuanian">Litauisch</string>
    <string name="malay">Malaiisch</string>
    <string name="norwegian">Norwegisch</string>
    <string name="polish">Polnisch</string>
    <string name="portuguese">Portugiesisch</string>
    <string name="romanian">Rumänisch</string>
    <string name="serbian">Serbisch</string>
    <string name="slovak">Slowakisch</string>
    <string name="slovenian">Slovenisch</string>
    <string name="spanish">Spanisch</string>
    <string name="swedish">Schwedisch</string>
    <string name="thai">Thailändisch</string>
    <string name="turkish">Türkisch</string>
    <string name="ukranian">Ukraninisch</string>

    <!-- Categories -->
    <string name="business">Business</string>
    <string name="entertainment">Unterhaltung</string>
    <string name="environment">Umwelt</string>
    <string name="food">Kulinarik</string>
    <string name="health">Gesundheit</string>
    <string name="politics">Politik</string>
    <string name="science">Wissenschaft</string>
    <string name="sports">Sport</string>
    <string name="technology">Technologie</string>
    <string name="top">Top</string>
    <string name="world">International</string>


    <!-- Hints -->
    <string name="selectCountriesHint">Hier können bis zu 5 Länder gewählt werden.</string>
    <string name="selectLanguagesHint">Hier können bis zu 5 Sprachen gewählt werden.</string>
    <string name="selectCategoriesHint">Hier können bis zu 5 Kategorien ausgewählt werden.</string>
    <string name="selectHelpHint">Hier können weitere Bedienungshilfen nachgelesen werden.</string>
    <string name="keywordSearch">Schlüsselwortsuche</string>
    <string name="validKeywordPatterns">Folgende Optionen stehen zur Verfügung:</string>
    <string name="validKeywordPatternStandardTitle">--Normale Stichwortsuche</string>
    <string name="validKeywordPatternStandardExample">(z.B \"Tennis\" oder \"Apple iPhone\")</string>
    <string name="validKeywordPatternExcludeTitle">--Stichwort exkludieren</string>
    <string name="validKeywordPatternExcludeExample">(z.B \"Apple -iPhone\")</string>
    <string name="validKeywordPatternAndTitle">--Kombinierte Stichwortsuche: AND</string>
    <string name="validKeywordPatternAndExample">(z.B "Fußball AND München AND Alaba")</string>
    <string name="validKeywordPatternOrTitle">--Kombinierte Stichwortsuche: OR</string>
    <string name="validKeywordPatternOrExample">(z.B "Apple OR Microsoft OR Google")</string>
    <string name="keywordSearchAndOrHintTitle">!ACHTUNG: Stichwortsuchen mit AND und OR können NICHT kombiniert werden!</string>
    <string name="keywordSearchAndOrHintExample">("Apple AND Microsoft OR Google")</string>
    <string name="loginApply">Anmelden</string>
    <string name="loginLinkDescription">Wenn du noch keinen API-Key von newsdata.io hast, folge dem untenstehenden Link um kostenlos einen zu erstellen.</string>
    <string name="enterApiKey">API-Key eingeben</string>
    <string name="change_api_key">Neuer API-Key</string>
    <string name="apiChangeApply">API-Key ändern</string>

</resources>