<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--android:background="#408c5930">-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/countries_filter_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/distance_small"
                android:orientation="horizontal"
                android:weightSum="5"
                android:background="?cardColor">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:src="@drawable/baseline_location_on_black_48dp"
                    android:layout_weight="1.5"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:orientation="vertical"
                    android:layout_weight="3.5"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/select_country"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/distance_small"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/distance_small"
                        android:text="@string/selectCountriesHint"
                        style="@style/TextAppearance.MaterialComponents.Body2"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/languages_filter_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/countries_filter_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/distance_small"
                android:orientation="horizontal"
                android:weightSum="5"
                android:background="?cardColor">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:src="@drawable/baseline_language_black_48dp"
                    android:layout_weight="1.5"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:orientation="vertical"
                    android:layout_weight="3.5"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/select_language"
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_weight="1"
                        android:gravity="center"
                        style="@style/TextAppearance.MaterialComponents.Body1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/distance_small"
                        android:text="@string/selectLanguagesHint"
                        style="@style/TextAppearance.MaterialComponents.Body2"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/categories_filter_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/languages_filter_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/distance_small"
                android:orientation="horizontal"
                android:weightSum="5"
                android:background="?cardColor">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:src="@drawable/baseline_category_black_48dp"
                    android:layout_weight="1.5"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:orientation="vertical"
                    android:layout_weight="3.5"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/select_categories"
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_weight="1"
                        android:gravity="center"
                        style="@style/TextAppearance.MaterialComponents.Body1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/distance_small"
                        android:text="@string/selectCategoriesHint"
                        style="@style/TextAppearance.MaterialComponents.Body2"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/help_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/categories_filter_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/distance_small"
                android:orientation="horizontal"
                android:weightSum="5"
                android:background="?cardColor">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:src="@drawable/baseline_help_black_48dp"
                    android:layout_weight="1.5"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:orientation="vertical"
                    android:layout_weight="3.5"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/open_help"
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_weight="1"
                        android:gravity="center"
                        style="@style/TextAppearance.MaterialComponents.Body1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/distance_small"
                        android:text="@string/selectHelpHint"
                        style="@style/TextAppearance.MaterialComponents.Body2"/>
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/filtersKeyword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_filter"
                android:inputType="textFilter"
                android:layout_margin="@dimen/distance_small"
                app:layout_constraintEnd_toStartOf="@+id/filtersSearchButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_button"/>

            <Button
                android:id="@+id/filtersSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_search"
                android:layout_margin="@dimen/distance_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_button"
                app:layout_constraintStart_toEndOf="@id/filtersKeyword"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</FrameLayout>